--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,7 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
+
+GOOGLE_APP_ID=
+GOOGLE_APP_SECRET= 
+GOOGLE_APP_REDIRECT_URL=
